[FIX] 스크롤뷰 아래 버튼 마진값 일정하게

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,13 +12,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_all"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.registration.LoginActivity">
+            tools:context=".ui.registration.RegisterActivity">
 
             <ImageView
                 android:id="@+id/iv_register_back"
@@ -60,7 +61,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="257dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_seemeet_start">
