--- a/app/src/main/res/layout/activity_register_name_id_activity.xml
+++ b/app/src/main/res/layout/activity_register_name_id_activity.xml
@@ -86,6 +86,8 @@
 
             <EditText
                 android:id="@+id/et_name"
+                nameCursorPos="@{registerNameIdviewModel.name_cursorPos}"
+                nameInvalidCase="@{registerNameIdviewModel.name_invalidCase}"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="16dp"
@@ -95,6 +97,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:hint="@string/register_hint_name"
                 android:inputType="textPersonName"
+                android:maxLength="5"
                 android:paddingStart="12dp"
                 android:text="@={registerNameIdviewModel.registerName}"
                 android:textColor="@color/gray06"
