--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -134,6 +134,8 @@
 
             <EditText
                 android:id="@+id/et_mypage_name"
+                nameCursorPos="@{myPageviewModel.name_cursorPos}"
+                nameInvalidCase="@{myPageviewModel.name_invalidCase}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -141,6 +143,7 @@
                 android:enabled="false"
                 android:fontFamily="@font/spoqa_han_sans_neo_regular"
                 android:inputType="textPersonName"
+                android:maxLength="5"
                 android:text="@={myPageviewModel.mypageName}"
                 android:textColor="@color/black"
                 android:textSize="16sp"
