--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -26,32 +26,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_img_seemeet_logo_symbol_typo_square" />
 
-        <FrameLayout
-            android:id="@+id/fl_kakao"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/kakao_logo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="48dp"
+            android:layout_marginEnd="16dp"
+            android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_logo">
-
-            <ImageView
-                android:id="@+id/kakao_logo"
-                android:layout_width="328dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:clickable="true"
-                app:srcCompat="@drawable/ic_kakao_login" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="24dp"
-                android:layout_height="23dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="102dp"
-                android:layout_marginTop="1dp"
-                app:srcCompat="@drawable/ic_kakaotalk" />
-        </FrameLayout>
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
+            app:srcCompat="@drawable/ic_btn_kakao" />
 
         <TextView
             android:id="@+id/tv_email_register"
@@ -67,7 +54,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/tv_line"
-            app:layout_constraintTop_toBottomOf="@+id/fl_kakao" />
+            app:layout_constraintTop_toBottomOf="@+id/kakao_logo" />
 
         <TextView
             android:id="@+id/tv_line"
@@ -103,6 +90,7 @@
             android:id="@+id/mypage_info1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
             android:layout_marginBottom="30dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="@string/login_main_info1"
@@ -161,6 +149,7 @@
             android:id="@+id/mypage_info5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="44dp"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:text="@string/login_main_info5"
             android:textColor="@color/gray05"
