--- a/app/src/main/res/layout/fragment_first_apply.xml
+++ b/app/src/main/res/layout/fragment_first_apply.xml
@@ -7,6 +7,7 @@
     android:id="@+id/sv_first_apply"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:fillViewport="true"
     android:overScrollMode="never"
     tools:context=".ui.apply.FirstApplyFragment">
